bug text align

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -96,6 +96,8 @@ section {
         .about {
             font-size: 1.5vw !important;
             width: 100% !important;
+
+            text-align: initial ;
     
             h3 {
                 font-size: 1.2em !important;
